--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ footer-link-col: "#6A5ACD"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/bgimage.png"
+page-img: "/assets/img/1280px-Red_state,_blue_state.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
