--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ navbar-links:
   About Halouma: "Meet the Halouma team !"
   Resources:
     - US 2016 Presidential Elections : "https://www.nytimes.com/elections/2016/results/president"
-    - Zoom on Texasr results: "https://www.nytimes.com/elections/2016/results/texas"
-    - Other lol changer le lien : "https://www.presse-citron.net/trottinettes-electriques-carte-france-monde-lime-bird/"
+    - Zoom on Texas results: "https://www.nytimes.com/elections/2016/results/texas"
+    - The Stanford Open Policing Project : "https://openpolicing.stanford.edu"
 
 # --- Footer social media links --- #
 
