--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: The Halouma team
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About me: "Meet the Halouma team !"
+  About Halouma: "Meet the Halouma team !"
   Resources:
     - US 2016 Presidential Elections : "https://www.nytimes.com/elections/2016/results/president"
     - Zoom on Texas results: "https://www.nytimes.com/elections/2016/results/texas"
