--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author: The Halouma team
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Halouma: "Meet the Halouma team !"
-  Resources:
+  About Halouma: "aboutme"
+Resources:
     - US 2016 Presidential Elections : "https://www.nytimes.com/elections/2016/results/president"
     - Zoom on Texas results: "https://www.nytimes.com/elections/2016/results/texas"
     - The Stanford Open Policing Project : "https://openpolicing.stanford.edu"
