--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Racism and political orientation
+title: Comparing racial disparities in police stops in blue and red states
 
 # Your name to show in the footer
 author: The Halouma team
